# GLGrassRenderer

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.txt
cmake/: ClangTidy.cmake  clangformat.cmake  compiler.cmake  cppcheck.cmake
data/: compute.comp  grass.comp  grass.comp.glsl  grass.frag  grass.frag.glsl  grass.tesc  grass.tesc.glsl  grass.tese  grass.tese.glsl  grass.vert  grass.vert.glsl  land.frag  land.frag.glsl  land.fs  land.vert  land.vert.glsl  skybox.frag.glsl  skybox.vert.glsl
src/: CMakeLists.txt  camera.cpp  camera.hpp  grasses.cpp  grasses.hpp  main.cpp  model.cpp  model.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp
